# lms_drf

./: .coverage  .env.sample  .gitignore  Dockerfile  README.md  courses_fixture.json  couses_fixture.json  docker-compose.yml  groups_fixture.json  lessons_fixture.json  payments_fixture.json  pyproject.toml  users_fixture.json
.github/workflows/: ci.yml
config/: settings.py  urls.py
materials/: models.py  pagination.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_course_img_alter_lesson_course_and_more.py  0003_course_owner_lesson_owner.py  0004_course_price_lesson_price.py  0005_course_updated_at.py  0006_lesson_updated_at.py  0007_remove_lesson_updated_at_alter_course_updated_at.py  0008_alter_course_updated_at.py  0009_alter_course_updated_at.py
nginx/: nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_avatar_customuser_country_and_more.py  0003_payment.py  0004_subscription.py  0005_payment_payment_link.py  0006_alter_payment_payment_link.py  0007_payment_session_id.py  0008_remove_payment_session_id.py
